[package]
name = "coinbase"
version = "0.1.0"
edition = "2021"
authors = ["Hongzheng Wang <wanghz@gmail.com>"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures = { version = "0.3.8" }
futures-util = { version = "0.3.8", features = ["compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
futures-channel = "0.3.25"
tungstenite = "0.18.0"
ordered-float = "3.4.0"
